--- a/css/barra.css
+++ b/css/barra.css
@@ -24,7 +24,7 @@ html, body {
     padding: 1rem;
     padding-right: 8rem; /* Establecemos el espacio entre las viñetas y el list item */
     
-    transition-duration: 1s;
+    transition: all 1s;
 }
 
 .header ul li a:hover{
@@ -100,6 +100,7 @@ html, body {
     color: white;
   }
 
+
   .arrowButton {
     display: inline-block;
     border-radius: 4px;
@@ -139,6 +140,8 @@ html, body {
     opacity: 1;
     right: 0;
   }
+  
+
   .btn-group .button {
     background-color: #4CAF50; /* Green */
     border: 1px solid green;
@@ -158,4 +161,81 @@ html, body {
   
   .btn-group .button:hover {
     background-color: #3e8e41;
+  }
+
+
+.animacion1{
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  position: relative;
+  animation-name: example;
+  animation-duration: 4s;
+  animation-delay: 1s;
+  animation-iteration-count: 2;
+  animation-direction: alternate;  
+  
+  display: inline-block;
+}
+@keyframes example {
+  0%   {background-color:red; left:0px; top:0px;}
+  25%  {background-color:yellow; left:200px; top:0px;}
+  50%  {background-color:blue; left:200px; top:200px;}
+  75%  {background-color:green; left:0px; top:200px;}
+  100% {background-color:red; left:0px; top:0px;}
+}
+.animated_div{
+  width:70px;
+  height:47px;
+  background: #92B901;
+  color: #ffffff;
+  position: relative;
+  font-weight:bold;
+  font-size:20px;
+  padding:10px;
+  
+  animation:animated_div 5s 1;
+  -moz-animation:animated_div 5s 1;
+  -webkit-animation:animated_div 5s 1;
+  -o-animation:animated_div 5s 1;
+  border-radius:5px;
+  -webkit-border-radius:5px;
+  }
+  
+  @keyframes animated_div
+  {
+  0% {transform: rotate(0deg);left:0px;}
+  25% {transform: rotate(20deg);left:0px;}
+  50% {transform: rotate(0deg);left:500px;}
+  55% {transform: rotate(0deg);left:500px;}
+  70% {transform: rotate(0deg);left:500px;background:#1ec7e6;}
+  100% {transform: rotate(-360deg);left:0px;}
+  }@-webkit-keyframes animated_div
+  {
+  0% {-webkit-transform: rotate(0deg);left:0px;}
+  25% {-webkit-transform: rotate(20deg);left:0px;}
+  50% {-webkit-transform: rotate(0deg);left:500px;}
+  55% {-webkit-transform: rotate(0deg);left:500px;}
+  70% {-webkit-transform: rotate(0deg);left:500px;background:#1ec7e6;}
+  100% {-webkit-transform: rotate(-360deg);left:0px;}
+  }
+  
+  @-moz-keyframes animated_div
+  {
+  0%  {-moz-transform: rotate(0deg);left:0px;}
+  25% {-moz-transform: rotate(20deg);left:0px;}
+  50%  {-moz-transform: rotate(0deg);left:500px;}
+  55%  {-moz-transform: rotate(0deg);left:500px;}
+  70%  {-moz-transform: rotate(0deg);left:500px;background:#1ec7e6;}
+  100% {-moz-transform: rotate(-360deg);left:0px;}
+  }
+  
+  @-o-keyframes animated_div
+  {
+  0% {transform: rotate(0deg);left:0px;}
+  25% {transform: rotate(20deg);left:0px;}
+  50%  {transform: rotate(0deg);left:500px;}
+  55%  {transform: rotate(0deg);left:500px;}
+  70%  {transform: rotate(0deg);left:500px;background:#1ec7e6;}
+  100% {transform: rotate(-360deg);left:0px;}
   }
