--- a/css/masterstyle.css
+++ b/css/masterstyle.css
@@ -2,62 +2,257 @@
 *{
     padding: 0;
     margin: 0;
-    color: #eee;
-    text-align: center;
 }
 
 html, body {
     background-color: white;
+    font-family: Poppins;
 }
 
-.uno a{
-    text-decoration: none;
-    display: block;
-    border: 0px solid #84A59D;
-    border-radius: 10px;
-    width: 20%;
-    height: 50px;
-    text-align: center;
-    padding-top: 1rem;
+.contenedor{
+    width: 90%;
+    max-width: 1200px;
+    overflow: hidden;
     margin: auto;
-    background-color: #84A59D;
-    color: white;
-    font-family: Arial;
-
-    transition: 1s;
-    -webkit-transition: 1s;
-    -o-transition: 1s;
-    -moz-transition: 1s;
-    -ms-transition: 1s;
-}
-.uno a:hover{
-    background-color: #9088a7;
-    width: 10%;
-    /*transform: rotate(360deg)*/;
+    padding: 60px 0px;
 }
 
-.main-container{
-    border: 4px solid #1f9bac;
-    border-radius: 20px;
-    margin: 2rem;
-    background-color: #7adee6;
+.header{
+    height: 100vh;
+    background-image: linear-gradient(to top, rgba(244, 59, 71, 0.5) 0%, rgba(68, 58, 148, 0.5) 100%), url(../img/teclado.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
 }
 
-nav,section,footer,article,aside{
-    border: 2px solid #8d99ae;
-    margin: 2rem;
+.head{
+    padding: 0;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: #fff;
+}
+
+:root{
+    scroll-behavior: smooth;
+}
+
+.open{
+    position: fixed;
+    top: 30px;
+    right: 30px;
+    background-color: #fff;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
     border-radius: 10px;
-    padding: 1rem;
+    box-shadow: 0 0 6px rgba(0,0, 0, 0.5);
 }
 
-article, aside{
+.menu-navegacion{
+    position: fixed;
+    top: 0;
+    right: 0%;
+    width: 20vw;
+    height: 100%;
+    background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    transform: translate(110%);
+    box-shadow: 0,0,6px rgba(0,0, 0, 0.5);
+}
+.spread{
+    transform: translate(0);
+}
+
+.menu-navegacion a{
+    color: #fff;
+    text-decoration: none;
+}
+
+.titulo{
+    font-size: 60px;
+    margin-bottom: 15px;
+}
+.copy{
+    font-weight: 300px;
+    font-size: 20px;
+}
+
+/*ESCOLARIDAD*/
+
+.subtitulo{
+    text-align: center;
+    font-weight: 300px;
+    font-size: 2.5rem;
+    color: rgb(69, 94, 137);
+}
+
+.contenedor-estudios{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    
+}
+.contenedor-estudios img{
     width: 40%;
+}
+.estudios-servicio{
+    width: 45%;
+}
+.estudios{
+    margin-bottom: 20px;
+}
+.a-estudios{
+    margin-bottom: 7px;
+    color: #13547a;
+}
+.number1{
+    color: #fff;
     display: inline-block;
-    height: 150px;
-    background-color: #637279;
+    background-image: linear-gradient(to top, #0250c5 0%, #d43f8d 100%);
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    border-radius: 50%;
+    font-weight: 700;
+    line-height: 30px;
+    margin-right: 5px;
 }
 
-nav,section,footer{
-    background-color: #2b2d42;
+/*Hobbies*/
+
+.Hobbies{
+    background-color: #f2f2f2;
+}
+.contenedor-hobbies{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+.img-hobbies{
+    width: 30%;
+    display: block;
+    margin-bottom: 15px;
+    box-shadow: 0,0,6px rgba(0,0, 0, 0.5);
+    cursor: pointer;
+}
+.img-light{
+    position: fixed;
+    background: rgba(0,0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translate(100%);
+    transition: transform .2s ease-in-out;
+}
+.show{
+    transform: translate(0);
+}
+.agregar-img{
+    width: 60%;
+    border-radius: 10px;
+    transform: scale(0);
+    transition: transform .3s .2s;
+}
+.showImage{
+    transform: scale(1);
+}
+.close{
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    width: 40px;
+    cursor: pointer;
 }
 
+/*Especialidades*/
+
+.especialidades{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.cont-esp{
+    width: 30%;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.cont-esp img{
+    width: 80%;
+    display: block;
+    margin: auto;
+}
+.a-experto{
+    display: inline-block;
+    margin-top: 20px;
+    width: 100%;
+    font-weight: 400px;
+}
+
+/*Footer*/
+
+footer{
+    background:rgb(137, 43, 100);
+    padding-bottom: 0.1px;
+}
+.footer-content{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-top: 60px;
+    padding-bottom: 40px;
+}
+.contact-us{
+    width: 40%;
+    color:#fff;
+}
+.brand{
+    font-weight: 500;
+    font-size: 40px;
+}
+.brand+p{
+    font-weight: 500;
+}
+.social-media{
+    width: 50%;
+    display: flex;
+    justify-content: flex-end;
+}
+.social-media-icon{
+    display: inline-block;
+    margin-left: 20px;
+    width: 60px;
+    height: 60px;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    text-align: center;
+    color:#fff;
+}
+.social-media-icon:hover{
+    background: #fff;
+    color: #1780A1;
+}
+.social-media-icon i{
+    font-size: 30px;
+    line-height: 60px;
+}
+.line{
+    width: 90%;
+    max-width: 1200px;
+    margin: auto;
+    height: 2px;
+    background: #fff;
+    margin-bottom: 60px;
+}
