--- a/css/masterstyle.css
+++ b/css/masterstyle.css
@@ -49,6 +49,7 @@ html, body {
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
+    transition: transform .2s ease-in-out;
 }
 
 .head{
@@ -90,6 +91,9 @@ html, body {
     align-items: center;
     transform: translate(110%);
     box-shadow: 0,0,6px rgba(0,0, 0, 0.5);
+    
+    transform: translate(100%);
+    transition: transform .2s ease-in-out;
 }
 .spread{
     transform: translate(0);
