--- a/css/hobbies.css
+++ b/css/hobbies.css
@@ -84,6 +84,12 @@ aside {
     margin:auto;
     border-radius: 5px;
 }
+.img-tabla{
+    width:100%;
+    display:block;
+    margin:auto;
+    border-radius: 5px;
+}
 .video{
     display:block;
     margin:auto;
@@ -92,4 +98,79 @@ aside {
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
+}
+
+
+.especialidades{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.cont-esp{
+    width: 30%;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.cont-esp img{
+    width: 80%;
+    display: block;
+    margin: auto;
+}
+
+/* footer */
+
+footer{
+    background:#b7b7a4;
+    padding-bottom: 0.1px;
+}
+.footer-content{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-top: 60px;
+    padding-bottom: 40px;
+}
+.contact-us{
+    width: 40%;
+    color:#fff;
+}
+.brand{
+    font-weight: 500;
+    font-size: 40px;
+}
+.brand+p{
+    font-weight: 500;
+}
+.social-media{
+    width: 50%;
+    display: flex;
+    justify-content: flex-end;
+}
+.social-media-icon{
+    display: inline-block;
+    margin-left: 20px;
+    width: 60px;
+    height: 60px;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    text-align: center;
+    color:#fff;
+    transition: 0.5s;
+}
+.social-media-icon:hover{
+    background: #fff;
+    color: #d9ded8;
+}
+.social-media-icon i{
+    font-size: 30px;
+    line-height: 60px;
+}
+.line{
+    width: 90%;
+    max-width: 1200px;
+    margin: auto;
+    height: 2px;
+    background: #fff;
+    margin-bottom: 60px;
 }
