guardando todo por si acaso xd

--- a/css/problemas1.css
+++ b/css/problemas1.css
@@ -24,6 +24,8 @@ body{
 }
 .contenedor{
     text-align: center;
+    align-items: center;
+    align-self: center;
     display: flex;
     align-items: center;
 }
