--- a/css/problemas1.css
+++ b/css/problemas1.css
@@ -36,7 +36,7 @@ body{
     color: rgba(0,0,0,0.7);
     font-size: 1.5vw;
 }
-.formulario-input, .formulario-submit{
+.formulario-input, .formulario-submit, .formulario-respuesta{
     display: block;
     width: 100%;
     border: 1px solid rgba(0,0,0,0.3);
@@ -46,6 +46,11 @@ body{
     padding: 20px;
     border: 1px solid rgba(0,0,0,0.3);
     background: #bde0fe50;
+}
+.formulario-respuesta{
+    padding: 20px;
+    border: 1px solid rgba(0,0,0,0.3);
+    background: #244d7050;
 }
 .formulario-input:focus{
     outline: 1px solid #edf6f9;
