--- a/css/problemas1.css
+++ b/css/problemas1.css
@@ -42,6 +42,14 @@ body{
     display: block;
     margin-bottom: 15px;
 }
+.img2{
+    width: 50%;
+    display: block;
+    margin:auto;
+    margin-top: 30px;
+    margin-bottom:30px;
+    border-radius: 5px;
+}
 .p-titulo{
     text-align: center;
     margin-top: 0;
