--- a/css/algoritmia.css
+++ b/css/algoritmia.css
@@ -1,32 +1,36 @@
 *{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Balsamiq Sans', cursive;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    transition: all 0.5s;
 }
 
 body{
     margin: 0;
     padding: 0;
-    background-color: #eee;
+    color: #3f4238;
+    background-image: linear-gradient(to top, #d5dee770 0%, #fec89a70 0%, #d7fff270 100%);
+    font-size: 18px;
 }
 
 h3, h4{
-    color: rgba(0,0,0,0.87);
+    color: #3f4238;
 }
 
 .container{
-    width: 100%;
+    width: 60%;
     padding: 1rem;
-    margin: 0;
+    margin: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: column;
+    position: relative;
 }
 
 .problema-container{
-    background-color: aquamarine;
+    background-color: #ddf3f0;
     padding: 1rem;
     box-sizing: 0 1px 3px rgba(0,0,0,0.12), 
                 0 1px 2px rgba(0,0,0,0.24);
@@ -39,8 +43,6 @@ h3, h4{
     border-bottom: 1px solid #eee;
 }
 
-
-
 .problema-content{
     display: flex;
     padding: 1rem;
@@ -50,17 +52,18 @@ h3, h4{
 }
 
 input.problema-input{
-    padding: 1remm;
+    padding: 1rem;
     color: rgba(0,0,0,0.57);
     background: none;
     border: none;
     width: 100%;
-    border-bottom: 2px solid rgb(0, 117, 255);
+    border-bottom: 2px solid #fec89a;
+    font-size: 15px;
 }
 
 button.problema-button{
     border:none;
-    background-color: rgb(0, 117, 255);
+    background-color: #fec89a;
     color: white;
     text-transform: uppercase;
     font-weight: bold;
@@ -71,9 +74,9 @@ button.problema-button{
 
 .problema-ouput{
     width: 70%;
-    color: rgba(0,0,0,0.7);
+    color: #3f4238;
     font-family: 'monoscape';
-    border: 1px solid #b4b4b4;
+    border: 1px solid #f8edeb;
     border-radius: 5px;
     padding: 1rem;
     margin-top: 1rem;
@@ -81,11 +84,11 @@ button.problema-button{
 
 table.problema-table{
     margin:1rem;
-    border: 1px solid rgb(208, 208, 208);
+}
+.problema-input:focus{
+    outline: 1px solid #fcd5ce;
 }
 
 td{
-    border-bottom: 1px solid #c3c3c3;
     padding-bottom: 1rem;
-    border-left: 1px solid #c3c3c3;
 }
