--- a/css/algoritmia.css
+++ b/css/algoritmia.css
@@ -70,6 +70,10 @@ button.problema-button{
     padding: 0.8rem;
     border-radius: 4px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    cursor: pointer;
+}
+.problema-button:focus{
+    outline: none;
 }
 
 .problema-ouput{
