--- a/ServletHolaMundo/web/CSS/masterstyle.css
+++ b/ServletHolaMundo/web/CSS/masterstyle.css
@@ -19,7 +19,13 @@ em{
 .titulo{
     text-align: center;
 }
-
+.centrar{
+    display: inline-block;
+    margin-right: auto;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
 .container{
     background-color: #e8e8e4;
     text-align: center;
